2003-03-26  Kenichi Handa  <handa@etlken2>

	* files.el (recode-file-name): New function.

	* international/characters.el: Setup categories for Indian characters.

2003-03-26  Steve Youngs  <youngs@xemacs.org>

	* em-unix.el (eshell-plain-locate-behavior): Make the default the
	return value of `eshell-under-xemacs-p', ie, nil for GNU/Emacs and
	non-nil for XEmacs.

2003-03-25  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/byte-opt.el (byte-optimize-set): New.
	Turn `set' into `setq' when applicable.

2003-03-24  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Pass unknown keyword
	args blindly to defcustom.  Use custom-set-minor-mode.

2003-03-24  Kim F. Storm  <storm@cua.dk>

	* simple.el: Rework last change so C-x C-SPC C-SPC does not
	repeat pop-global-mark by default.
	(pop-global-mark-quick-repeat): New user option.
	(set-mark-command): Use it.

	* emulation/cua-base.el (cua-set-mark):
	Check pop-global-mark-quick-repeat.

2003-03-24  John Paul Wallington  <jpw@gnu.org>

	* emacs-lisp/easymenu.el (easy-menu-add-item): Don't default to
	the global map.

	* emerge.el (emerge-show-file-name): Read event irrespective of
	whether minibuffer window is resized.  Clear minibuffer when done.

	* cus-theme.el (customize-create-theme): Rename from
	`custom-theme-create'.

2003-03-24  Luc Teirlinck  <teirllm@mail.auburn.edu>

	* cus-edit.el (custom-mode): Make `custom-local-buffer' local.

2003-03-23  Peter Breton  <pbreton@attbi.com>

	* net/net-utils.el (dns-lookup-host): New function.

2003-03-23  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-mode.el (c-parse-state): Add kludge to avoid
	an infinite loop when Emacs' open-paren-in-column-zero rule
	kicks in and causes the sexp functions to misbehave.

2003-03-22  Peter Breton  <pbreton@cs.umb.edu>

	* filecache.el (file-cache-add-directory-recursively)
	(file-cache-complete, file-cache-display): New functions.
